syntax = "proto3";

package koin;

message mana_balance_object {
  uint64 balance = 1;
  uint64 mana = 2;
  uint64 last_mana_update = 3;
  bool votes_koinos_fund = 4;
}

message balance_object {
  uint64 value = 1;
}

message set_votes_koinos_fund_arguments {
  bytes account = 1;
  bool votes_koinos_fund = 2;
}
